Independent sequencers allow for mismatched measure lengths

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ textarea {
 }
 </style>
 </head>
+<span id='status'>loading samples...</span><br>
 <textarea id='beats'></textarea>
 <textarea id='piano'></textarea>
 </html>
