slight clarification to instructions

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ p {
     <div class='sequencer'>
         <span>piano</span>
         <textarea id='piano'></textarea>
-        <p>On a QWERTY keyboard, letters on each row represent notes C through
-        B, with lower rows representing higher octaves. Capital letters are
-        louder, non-letters are silent.</p>
+        <p>On a QWERTY keyboard, the first 7 letters on each row represent
+        notes C through B, with lower rows representing higher octaves. Capital
+        letters are louder, non-letters are silent.</p>
     </div>
 </div>
 </html>
