--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ textarea {
 
 .sequencer-preview {
     flex: 1;
-    background-color: #d0cfcf;
+    background-color: var(--background-alt);
+    color: var(--text);
     border-radius: 6px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
@@ -61,7 +62,8 @@ textarea {
 }
 
 .active {
-    background-color: #9b9b9b;
+    background-color: var(--selection);
+    color: var(--code);
     text-decoration: underline;
 }
 </style>
